feat: implement authentication service (AUTH-1)
- Add user registration with email/password validation
- Add user login with JWT token generation
- Integrate Firebase Authentication (OAuth 2.0)
- Implement JWT-based stateless authentication
- Add Spring Security configuration
- Create RESTful API with 6 endpoints
- Add MySQL database support with H2 for testing
- Include Postman collection for API testing
- Add comprehensive documentation

Endpoints:
- POST /api/auth/signup - User registration
- POST /api/auth/login - User login
- POST /api/auth/verify-firebase-token - Firebase token verification
- GET /api/auth/validate-token - JWT validation
- GET /api/auth/user/{id} - Get user details
- GET /api/auth/health - Health check

Technology Stack:
- Spring Boot 3.3.0
- Spring Security
- Firebase Admin SDK
- JWT (jjwt 0.11.5)
- MySQL + H2 Database

Closes AUTH-1